Attempt to use page date to determine if display day for now.

--- a/_daily/2024-09-16.md
+++ b/_daily/2024-09-16.md
@@ -1,6 +1,7 @@
 ---
 title: Daily Note for 09/15/24
 location: 🚘 Community Appts, 🏫 Toppenish Campus
+date: 2024-09-16
 ---
 **Schedule**
 - 9:30 AM **Review Learning Contract - Site Visit Toppenish High School**
