--- a/_daily/2024-09-17.md
+++ b/_daily/2024-09-17.md
@@ -1,6 +1,7 @@
 ---
 title: Daily Note for 09/16/24
 location: 🏫 Toppenish Campus
+date: 2024-09-17
 ---
 **Schedule**
 - 9:00 AM **Hispanic Heritage Month Committee**
