--- a/_daily/2024-09-18.md
+++ b/_daily/2024-09-18.md
@@ -1,6 +1,7 @@
 ---
 title: Daily Note for 09/18/24
 location: 🏫 Kennewick Campus, 🌃🏫 CBC Campus
+date: 2024-09-18
 ---
 **Schedule**
 - 2:00 PM **Tri-Cities Office Hours** ([Join Zoom]( https://heritage.zoom.us/my/dr.jacob))
