--- a/_daily/2024-09-19.md
+++ b/_daily/2024-09-19.md
@@ -1,6 +1,7 @@
 ---
 title: Daily Note for 09/19/24
 location: 🚘 Community Appts, 🏡 Work from Home, 🛩️ Traveling
+date: 2024-09-19
 ---
 **NASW Conference** in Spokane
 **Stay at Northern Quest Resort**
