Fixes that didn't git updated?

--- a/_daily/2025-07-22.md
+++ b/_daily/2025-07-22.md
@@ -1,6 +1,6 @@
 ---
 title: Daily Note for 07/22/25
-location: ""
+location: 🏡 Work from Home
 date: 2025-07-22
 ---
 I'm hoping to finalize grades mostly. I am starting a read-through of the self-study (it's a 300-plus page document), and have some collaborative meetings.
