--- a/_daily/2025-07-23.md
+++ b/_daily/2025-07-23.md
@@ -1,6 +1,6 @@
 ---
 title: Daily Note for 07/23/25
-location: ""
+location: 🏡 Work from Home
 date: 2025-07-23
 ---
 Today I have a few personal appointments, but really the bulk of my day will be focused first on finalizing grades for 588 and submitting final grades and then on reading the BSW program self-study.
