Adding a quotes.json file.

--- a/_daily/2026-02-18.md
+++ b/_daily/2026-02-18.md
@@ -3,7 +3,7 @@ title: Daily Note for 02/18/26
 location: 🏡 Work from Home,  🏫 Kennewick Campus, 🌃🏫 CBC Campus
 date: 2026-02-18
 ---
-Working on course content today. I'll have the materials out for tonights class hopefully late morning.
+Working on course content today. I'll have the materials out for tonight's class,' hopefully late morning.
 
 **Schedule 02/18/26**
 
